envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: 
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/book" }
                          route: { cluster: book_service }
                        - match: { prefix: "/review" }
                          route: { cluster: review_service }
                        - match: { prefix: "/auth" }
                          route: { cluster: auth_service }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router


  clusters:
    - name: book_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: book_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: 
                      address: bookservice
                      port_value: 5294

    - name: review_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: review_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: 
                      address: reviewservice
                      port_value: 5212

    - name: auth_service
      connect_timeout: 0.25s
      type: logical_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: auth_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: 
                      address: authservice
                      port_value: 5102
